[package]
name = "ct"
version = "0.1.1"
edition = "2024"

[dependencies]
chrono = { version = "0.4", default-features = true, features = ["clock"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
crossterm = "0.29"
ratatui = "0.30"
toml = "0.8"
regex = "1"
md5 = "0.7"
indicatif = "0.17"
